Trevius: Added new Perl Mob quest object MakeTempPet(spell_id, [name=NULL, duration=0, target=NULL]).
Trevius: Added new Perl NPC quest object GetSwarmOwner() to get the ID of a swarm pet's owner.
Trevius: Hide will now break if you move when not sneaking, even if you have invisibility on.

==04/29/2010==
gaeorn: fixed tables to avoid login server hang if ServerTagDescription in tblWorldServerRegistration is null

Optional SQL: utils/sql/svn/1436_login_server_table_fix.sql

==04/28/2010==
Trevius: Attempting to trade with a player who is already in a trade will now give the "I'm busy right now" message for all clients.
Derision: Applied slot conversion so Apply Poison should now work in SoF.
gaeorn: login server now creates db entries for unregistered servers to keep same id across sessions
Derision: Fixed a cash amount display bug when the two participants in a Barter transaction are using different clients.

==04/27/2010==
Trevius: SoD/SoF - Clicky items with charges can no longer be cast if they have 0 charges left.
Secrets: Mana can now exceed 32k without rolling over to 0.

==04/26/2010==
Trevius: SoD/SoF - Failing a clicky item cast in certain scenarios should no longer cause the client to get bugged where the spells won't refresh.
Trevius: SoD/SoF - Cast bars from clicky items now use the cast time from the item, not from the spell.
Trevius: SoD - Potions in the potion belt can now be used even if they are inside bags.

==04/25/2010==
Derision: Fixed azone2 to handle missing model files (no longer crashes on oldfieldofbone.eqg)

==04/24/2010==
gaeorn: possible fix for long standing reconnect to login server problem if login server connection is down for an extended period of time.
Trevius: SoD - Added AA support for Harm Touch and Lay on Hands to replace the innate skills of the PAL/SK classes.

Optional SQL: utils/sql/svn/1410_optional_sod_aas_ht_and_loh.sql

==04/23/2010==
cavedude: Added Drakking to faction_list, updated wolf form and Skeleton.
